--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <form method="post" asp-action="Login">
     <label>Username:</label>
-    <input type="text" name="Username" required />
+    <input type="text" name="UserName" required />
     <br />
     <label>Password:</label>
     <input type="password" name="password" required />
