--- a/Views/Account/Registro.cshtml
+++ b/Views/Account/Registro.cshtml
@@ -20,7 +20,10 @@
       <label>Foto:</label>
     <input type="image" name="Foto" required />
     <br />
-    <p> <a href="/Account/Login">Registrarse</a></p>
+  <form method="post" asp-action="Registro">
+    <br/>
+    <button type="submit">Registrarse</button>
+</form>
 </form>
 
 @if (ViewBag.Error != null)
