--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,5 +19,40 @@ footer {
   margin-top: 10px;
   padding: 10px;
   background-color: #f8f9fa;
-  border-top: 1px solid #e9ecef;
+  border-top: 1px solid #efece9;
+  position: sticky;
 }
+form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+form input {
+  width: 96%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid green;
+  border-radius: 8px;
+
+
+}
+
+
+
+form button {
+  width: 100%;
+  background: #3498db;
+  color: white;
+  padding: 0.5%;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  margin: auto;
+  margin: 0.2%;
+}
+
+form button:hover {
+  background: #2980b9;
+}
+
