--- a/Views/Account/Registro.cshtml
+++ b/Views/Account/Registro.cshtml
@@ -22,7 +22,7 @@
     <br />
     
     <label>Foto:</label>
-    <input type="file" name="Foto" required />
+    <input type="file" name="Foto" />
     <br /><br />
     
     <button type="submit">Registrarse</button>
@@ -30,5 +30,5 @@
 
 
 <form method="get" asp-action="Login" asp-controller="Account">
-    <button type="submit" formnovalidate>Volver al Login</button>
+    <button type="submit">Volver al Login</button>
 </form>
